# DeepPi

./: CMakeLists.txt  README.md
include/: Tensor.h
include/Tensor/: Tensor.h  TensorMatmul.h  TensorOps.h
src/: TensorMatmul.cpp
tests/tensorTests/: test_access.cpp  test_matmul.cpp  test_substraction.cpp  test_sum.cpp  test_tensorops.cpp
